--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "deploy": "yarn build && npx thirdweb@latest upload dist"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/react": "^3.16.5",
     "@thirdweb-dev/sdk": "^3",
+    "@thirdweb-dev/tsconfig": "^0.1.7",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
