--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@thirdweb-dev/tsconfig": "^0.1.7",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4"
