--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,19 @@
     "@thirdweb-dev/react": "^3.16.5",
     "@thirdweb-dev/sdk": "^3",
     "@thirdweb-dev/tsconfig": "^0.1.7",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4"
+    "react-router-dom": "^6.4.4",
+    "recharts": "^2.13.3",
+    "shadcn-ui": "^0.9.3",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
